objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>Regression_List_View_My_New_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Regression List View - My New Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Console_Pinned_Header</fullName>
        <active>true</active>
        <description>Console Pinned Header layout for flexipage testing</description>
        <label>Console Pinned Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Console_Pinned_Header_and_Left</fullName>
        <active>true</active>
        <description>Console Pinned Header and Left sidebar layout for flexipage testing</description>
        <label>Console Pinned Header and Left</label>
    </recordTypes>
    <recordTypes>
        <fullName>Console_Pinned_Left</fullName>
        <active>true</active>
        <description>Console Pinned Left layout for flexipage testing</description>
        <label>Console Pinned Left</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header_Subheader_and_Left</fullName>
        <active>true</active>
        <description>Header Subjeader left sidebar flexipage layout</description>
        <label>Header Subheader and Left</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header_Subheader_and_Right</fullName>
        <active>true</active>
        <description>Header Subjeader right sidebar flexipage layout</description>
        <label>Header Subheader and Right</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header_and_1_Column</fullName>
        <active>true</active>
        <description>Header and 1 Column</description>
        <label>Header and 1 Column</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header_and_3_Columns</fullName>
        <active>true</active>
        <description>Header and 3 column flexipage layout</description>
        <label>Header and 3 Columns</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header_and_Left</fullName>
        <active>true</active>
        <description>Header and left sidebar flexipage layout</description>
        <label>Header and Left</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header_and_Right</fullName>
        <active>true</active>
        <description>Header and right sidebar for flexipage testing</description>
        <label>Header and Right</label>
    </recordTypes>
    <recordTypes>
        <fullName>X1_Col_Layout</fullName>
        <active>true</active>
        <description>Single column layout for flexipage testing</description>
        <label>1 Col Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3_Col_Layout</fullName>
        <active>true</active>
        <description>Three column layout for flexipage testing</description>
        <label>3 Col Layout</label>
    </recordTypes>
    <validationRules>
        <fullName>FieldError1</fullName>
        <active>true</active>
        <errorConditionFormula>AccountNumber  = 'FieldError'</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Field Error 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieldError2</fullName>
        <active>true</active>
        <errorConditionFormula>AccountNumber  = 'FieldError'</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Field Error 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Error</fullName>
        <active>true</active>
        <description>Example field error</description>
        <errorConditionFormula>BillingCity = 'FieldError'</errorConditionFormula>
        <errorDisplayField>BillingCity</errorDisplayField>
        <errorMessage>Billing City cannot be set to Error!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PageError1</fullName>
        <active>true</active>
        <errorConditionFormula>Name  = 'PageError'</errorConditionFormula>
        <errorMessage>Page Error 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PageError2</fullName>
        <active>true</active>
        <errorConditionFormula>Name  = 'PageError'</errorConditionFormula>
        <errorMessage>Page Error 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Page_Error</fullName>
        <active>true</active>
        <description>Generaic page error validation rule</description>
        <errorConditionFormula>CONTAINS(Name, 'PageError')</errorConditionFormula>
        <errorMessage>Top of page error message</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Page_Error2</fullName>
        <active>true</active>
        <description>Generaic page error validation rule</description>
        <errorConditionFormula>CONTAINS(Name, 'PageError')</errorConditionFormula>
        <errorMessage>Another top of page error message</errorMessage>
    </validationRules>
</CustomObject>